# GenomeMCP

./: Dockerfile  LICENSE  README.md  discovery_plan.md  implementation_plan.md  improvement_plan.md  install.sh  pyproject.toml  railway.json  setup-dev.sh  test_discovery_manual.py  test_genomics_manual.py  walkthrough.md
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: architecture_and_capabilities.md  cli_guide.md  research_guide.md  tool_reference.md
packaging/: README.md
packaging/homebrew/: genomemcp.rb
packaging/scoop/: genomemcp.json
src/: clinvar.py  genomics.py  main.py  pathways.py  population.py  server.py  utils.py
src/cli/: __init__.py  agent.py  app.py  config.py
src/cli/commands/: __init__.py
src/cli/formatters/: __init__.py  panels.py  tables.py
src/cli/llm/: __init__.py  client.py  llamacpp.py  ollama.py  tools.py
src/cli/research/: __init__.py  commands.py  pipeline.py
src/cli/tui/: __init__.py  app.py  chat.py
src/persistence/: client.py  migrations.sql
test_results/: TEST_RESULTS.md  TEST_RESULTS_2.md  integration_test_report.md
tests/: check_asgi.py  test_cli.py  test_genomics.py  test_integration.py  test_pathways.py  test_phase4.py  test_phase5.py  test_population.py  verify_persistence.py
